# make-mikan-os

./: .gitignore  Cargo.toml  Dockerfile.build  Makefile  OVMF_VARS.fd  README.md  devcontainer.json  hello.c
boot-loader/: Cargo.toml  rust-toolchain.toml
boot-loader/src/: main.rs
common/: Cargo.toml
common/src/: frame_buffer_config.rs  lib.rs  pixel_color.rs
kernel/: Cargo.toml  linker.ld  x86_64-unknown-none-ors.json
kernel/.cargo/: config.toml
kernel/src/: font.rs  font_writer.rs  main.rs  pixel_writer.rs
src/: main.rs
tools/: Cargo.toml  README.md
tools/src/: main.rs
