[package]
name = "make-mikan-os"
version = "0.1.0"
edition = "2021"

[dependencies]
# 必須ではないが、uefiがloggerサポートしてるのでついでに使うことにする
log = {version = "0.4", default-features = false}
# featuresはとりあえず全部有効にする
uefi = {version = "0.31", features = ["alloc", "logger"]}
# Rustがno_stdで要求するpanic_handlerの提供、およびinitユーティリティ
uefi-services = "0.25"
linked_list_allocator = "0.9.1"
