[package]
name = "make_mikan_os_boot_loader"
version = "0.1.0"
edition = "2021"

[dependencies]
# 必須ではないが、uefiがloggerサポートしてるのでついでに使うことにする
log = {version = "0.4", default-features = false}
# featuresはとりあえず全部有効にする
uefi = {version = "0.31", features = ["alloc", "logger"]}
# Rustがno_stdで要求するpanic_handlerの提供、およびinitユーティリティ
linked_list_allocator = "0.10.5"
make_mikan_os_common = { path = "../common" }